# secure-cloud

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.Docker.md  README.md  build.ninja  cmake_install.cmake  sonar-project.properties
.cmake/api/v1/reply/: cache-v2-a06d2b5b5ebe58b99e0e.json  cache-v2-b7ceba7055e85ba342f4.json  cache-v2-cd8a085993f6f47f390a.json  cmakeFiles-v1-0b742532fd91c1aaceda.json  cmakeFiles-v1-5374269dcabb1b44d941.json  cmakeFiles-v1-74455c04e9224e263fa1.json  codemodel-v2-5708e5a5d41bbde801a9.json  codemodel-v2-589e9bec1ee871d042f3.json  codemodel-v2-5e6bd464e30fe2e7fa5e.json  directory-.-Debug-c70e1da0c1647c84240e.json  directory-audit-service-Debug-dd25b0ca51abeabaee0f.json  directory-auth-service-Debug-917b63d468d1b51e268a.json  directory-auth-service-Debug-f1f018843662d9564227.json  directory-files-service-Debug-13ebe00c942c0365c8cd.json  directory-messaging-service-Debug-79db3185c05de421945b.json  index-2025-10-28T09-30-26-0982.json  index-2025-10-28T09-39-05-0297.json  index-2025-10-29T08-42-12-0858.json  target-audit-service-Debug-12c90cd50b5ca639c9e8.json  target-audit-service-Debug-a4973a1b867f3617a9e5.json  target-auth-service-Debug-55724d9d21b2a8a1dd98.json  target-auth-service-Debug-ece719ef8b6217a9600f.json  target-files-service-Debug-552a0d3021624c4b3082.json  target-files-service-Debug-7e253f672a5d4e057878.json  target-files-service-Debug-b737bf5f9c77cf672a5d.json  target-messaging-service-Debug-b81d21b2ae060f668e94.json  target-messaging-service-Debug-bba5a64c2938f1ba7e31.json  toolchains-v1-93a93bc31997d7f46d0b.json
.github/workflows/: ci-cd.yml  sonarcloud.yml
audit-service/: CMakeLists.txt  Dockerfile  cmake_install.cmake
audit-service/include/: audit.h
audit-service/src/: audit.cpp  main.cpp
auth-service/: CMakeLists.txt  Dockerfile  cmake_install.cmake
auth-service/include/: AuthController.h  auth.h  main.h
auth-service/src/: AuthController.cpp  auth.cpp  main.cpp
docker/: .env  docker-compose.yml  test.env
files-service/: CMakeLists.txt  Dockerfile  cmake_install.cmake
files-service/include/: files.h
files-service/src/: files.cpp  main.cpp
messaging-service/: CMakeLists.txt  Dockerfile  cmake_install.cmake
messaging-service/include/: ConversationController.h  ConversationService.cpp  ConversationService.h  main.h  messaging.h
messaging-service/src/: ConversationController.cpp  ConversationService.cpp  ConversationService.h  main.cpp  messaging.cpp
